# wxwidgets-Practice

./: .gitignore  CMakeLists.txt  bRL.sh
TutorialProject/include/: App.h  MainFrame.h
TutorialProject/src/: App.cpp  MainFrame.cpp  TasksData.txt
